[package]
name = "pic16f8x_emu"
version = "0.1.0"
authors = ["Jan Lafferton <jla@jcbachmann.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = { version = "^0.13.0", features = ["web_sys"] }
web-sys = "0.3.35"
regex = "1.3.4"
hex = "0.4.2"
log = "0.4.8"
console_log = "0.1.2"
serde = "1.0.104"
